# whisperi

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTINUE.md  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md
examples/prompts/: custom-prompt-en.txt  custom-prompt-zh.txt
scripts/: download-whisper-cpp.ps1  generate-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mod.rs  recorder.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: app.rs  audio.rs  clipboard.rs  database.rs  mod.rs  models.rs  reasoning.rs  settings.rs  transcription.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/reasoning/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/transcription/: cloud.rs  mod.rs  whisper.rs
src/components/: DictationOverlay.tsx  SettingsPanel.tsx
src/components/ui/: ApiKeyInput.tsx  HotkeyInput.tsx  LanguageSelector.tsx  LoadingDots.tsx  ProviderIcon.tsx  ProviderTabs.tsx  SettingsSection.tsx  Toast.tsx  accordion.tsx  card.tsx  (+12 more)
src/config/: constants.ts  languageRegistry.json  promptData.json  prompts.ts
src/hooks/: useAudioRecording.ts  useHotkey.ts  useSettings.ts
src/models/: modelRegistryData.json
src/services/: tauriApi.ts
src/utils/: formatBytes.ts  languageSupport.ts  sounds.ts
